--- a/e2e/test/E2ETests.csproj
+++ b/e2e/test/E2ETests.csproj
@@ -1,29 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1.18;net472;net451</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp3.1;netcoreapp2.1.18</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp3.1</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
     <IsPackable>false</IsPackable>
     <RootNamespace>Microsoft.Azure.Devices.E2ETests</RootNamespace>
     <AssemblyName>Microsoft.Azure.Devices.E2ETests</AssemblyName>
     <RootDir>$(MSBuildProjectDirectory)\..\..</RootDir>
   </PropertyGroup>
-
-  <!-- Legacy .NET 4.5.1 -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Compile Remove="config\Configuration.Provisioning.cs" />
-    <Compile Remove="provisioning\ProvisioningE2ETests.cs" />
-    <Compile Remove="provisioning\ProvisioningServiceClientE2ETests.cs" />
-    <Compile Remove="provisioning\ProvisioningCertificateValidationE2ETest.cs" />
-    <Compile Remove="helpers\StorageContainer.cs" />
-    <Compile Remove="helpers\ImportExportDevicesHelpers.cs" />
-    <Compile Remove="iothub\service\RegistryManagerImportDevicesTests.cs" />
-    <Compile Remove="iothub\service\RegistryManagerExportDevicesTests.cs" />
-    <Compile Remove="iothub\service\DigitalTwinClientE2ETests.cs" />
-    <Compile Remove="helpers\digitaltwins\models\ThermostatTwin.cs" />
-    <Compile Remove="helpers\digitaltwins\models\TemperatureControllerTwin.cs" />
-  </ItemGroup>
 
   <!-- All Platforms -->
   <ItemGroup>
@@ -31,18 +16,12 @@
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.14.0" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7" />
   </ItemGroup>
-
-  <!-- Legacy .NET 4.5.1 -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <!-- .NET 4.5.1 requires the System.ValueTuple NuGet package to be referenced explicitly. -->
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-  </ItemGroup>
   <!-- NetCore and .NET 4.7.2 -->
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net451' ">
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.3" />
   </ItemGroup>
 
