--- a/provisioning/service/samples/how to guides/GroupCertificateVerificationSample/GroupCertificateVerificationSample.csproj
+++ b/provisioning/service/samples/how to guides/GroupCertificateVerificationSample/GroupCertificateVerificationSample.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle" Version="1.8.9">
-	  <NoWarn>NU1701</NoWarn>
-	</PackageReference>
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
